# easy-kpf

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  task.md
.github/workflows/: ci.yml  release.yml
crates/easy-kpf-cli/: Cargo.toml
crates/easy-kpf-cli/src/: actions.rs  app.rs  executor.rs  kubectl.rs  main.rs  theme.rs  vim.rs
crates/easy-kpf-cli/src/actions/: confirm.rs  edit.rs  help.rs  mod.rs  normal.rs  port_forward.rs  search.rs  visual.rs
crates/easy-kpf-cli/src/components/: edit_form.rs  help_popup.rs  log_panel.rs  mod.rs  search_bar.rs  service_list.rs  status_bar.rs
crates/easy-kpf-cli/src/state/: autocomplete.rs  edit_field.rs  mod.rs
crates/easy-kpf-cli/src/tui/: event.rs  mod.rs  terminal.rs  ui.rs
crates/easy-kpf-core/: Cargo.toml
crates/easy-kpf-core/src/: error.rs  lib.rs  types.rs
crates/easy-kpf-core/src/ipc/: mod.rs  protocol.rs  socket_path.rs
crates/easy-kpf-core/src/services/: command_builder.rs  config_cache.rs  config_service.rs  last_active.rs  mod.rs  process_detector.rs  process_manager.rs
crates/easy-kpf-core/src/services/interface/: linux.rs  macos.rs  mod.rs
crates/easy-kpf-core/src/traits/: command_executor.rs  mod.rs
crates/easy-kpf-kpfctl/: Cargo.toml
crates/easy-kpf-kpfctl/src/: client.rs  main.rs
crates/easy-kpf-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
crates/easy-kpf-tauri/src/: ipc_server.rs  lib.rs  main.rs  reconnect.rs  window.rs
crates/easy-kpf-tauri/src/handlers/: mod.rs  port_forward.rs
crates/easy-kpf-tauri/src/services/: kubectl_service.rs  mod.rs  port_forward_service.rs
crates/easy-kpf-tauri/src/utils/: logging.rs
etc/: update-version.sh
etc/images/: .gitignore  convert_screenshots.sh
src/: App.css  App.tsx  ServiceCard.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  kubectl.rs  kubectl_context.rs  lib.rs  main.rs  port-forwards.rs  port_forwards.rs
src-tauri/src/handlers/: kubectl.rs  port_forward.rs
src-tauri/src/services/: command_builder.rs  config_cache.rs  config_service.rs  kubectl_service.rs  mod.rs  port_forward_service.rs  process_detector.rs  process_manager.rs
src-tauri/src/services/interface/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/types/: mod.rs
src-tauri/src/utils/: logging.rs
src/components/: AddConfigForm.tsx  ContextAccordion.tsx  EditConfigForm.tsx  ErrorBanner.tsx  FormActions.tsx  KubernetesForm.tsx  KubernetesSelect.tsx  NameField.tsx  PortSuggestions.tsx  ServiceSettings.tsx  SetupScreen.tsx  SshForm.tsx
src/hooks/: hooks.ts  useAsyncLoader.ts  useConnectionForm.ts  useFormState.ts  useKubernetesDataFlow.ts  useNameDerivation.ts  useSshTesting.ts
src/utils/: formHandlers.ts  groupingUtils.ts  kubernetesHelpers.ts  serviceErrors.ts
