[package]
name = "easy-kpf-core"
version = "0.1.0"
description = "Easy KPF - Core library for kubectl port forward management"
authors = ["you"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
