[package]
name = "easy-kpf-kpfctl"
version = "0.1.0"
description = "Easy KPF - CLI for controlling the running desktop app"
authors = ["you"]
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "ekpfctl"
path = "src/main.rs"

[dependencies]
easy-kpf-core = { path = "../easy-kpf-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
