[package]
name = "easy-kpf-tauri"
version = "0.1.0"
description = "Easy KPF - Kubernetes Port Forward Manager (Tauri GUI)"
authors = ["you"]
edition = "2021"

[lib]
name = "easy_kpf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
easy-kpf-core = { path = "../easy-kpf-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"

